# morning-me

./: NYC_EVENTS_MCP_SUMMARY.md  NYC_Events__Oct_20_Nov_20__2025_.csv  NYC_Events__Oct_20_Nov_20__2026_.csv  README.md  cline_mcp_settings.json  debug_mcp.py  event_finding.py  events_mcp.py  events_oct20_to_nov20_2025_nyc.sqlite  modelparams_systemprompt.txt  prefs.json  prompt_suggestions.txt  requirements.txt  simple_test.py  test_mcp.py  test_weather.py  weather_tool.py
google-calendar-mcp/: CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
google-calendar-mcp/docs/: docker.md
google-calendar-mcp/src/: auth-server.ts
google-calendar-mcp/src/auth/: server.ts  utils.ts
google-calendar-mcp/src/handlers/core/: BaseToolHandler.ts  CreateEventHandler.ts  DeleteEventHandler.ts  FreeBusyEventHandler.ts  GetCurrentTimeHandler.ts  (+6 more)
google-calendar-mcp/src/tools/: registry.ts
google-calendar-mcp/src/transports/: http.ts
google-calendar-mcp/src/types/: structured-responses.ts
google-calendar-mcp/src/utils/: response-builder.ts
nyc_events_mcp/: MCP_CONNECTOR_QUICK_START.md  QUICKSTART.md  README_MCP_CONNECTOR.md  SETUP_CHECKLIST.md  TEST_WITH_MCP_CONNECTOR.md  USAGE_EXAMPLES.md  claude_desktop_config.example.json  demo.py  pyproject.toml  requirements.txt  run.sh  test_mcp_connector.sh  test_with_mcp_connector.sh
nyc_events_mcp/src/nyc_events_mcp/: __main__.py  server.py
nyc_events_mcp/src/nyc_events_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nyc_events_mcp/src/nyc_events_mcp/tools/: toolhandler.py
(+16 files in other folders)
